# haskell-opensource

./: .travis.yml  CONTRIBUTING.md  LICENSE  License.hs  README.md  haskell-opensource.cabal  opensource.cabal
Network/Protocol/OpenSource/: License.hs
tests/: suite.hs
tests/data/: licenses.json
