name:                opensource
version:             0.1.0.0
synopsis:            Haskell API Wrapper for the Open Source License API
description:         The Open Source API contains metadata regarding OSI Approved Licenses, and crosswalks that help with using and integrating this information with external sources. This library is designed to interact with that API so that users can simply build applications that are license-aware.
homepage:            https://api.opensource.org/
license:             MIT
license-file:        LICENSE
author:              Clint Adams
maintainer:          Clint Adams <clint@debian.org>
copyright:           2016 Clint Adams
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag transformers_compat
  default: False
  description: use transformers-compat to get ExceptT

library
  exposed-modules:   Network.Protocol.OpenSource.License
  build-depends:
        base                     >=4.4 && <5
      , aeson
      , http-client
      , http-client-tls
      , text
  default-language:    Haskell2010
  if flag(transformers_compat)
    build-depends:
        transformers             > 0.2
      , transformers-compat      > 0.3
  else
    build-depends:
        transformers             > 0.3
